IVYPORTAL-14607: Various or urgent requests in IVYPORTAL - S235 > IVYPORTAL-14659: Preview of statistic widget is cropped at bottom - Fixed bug

--- a/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
+++ b/AxonIvyPortal/portal/webContent/resources/css/dashboard.css
@@ -1552,3 +1552,7 @@ span.new-widget-dialog__icon.si {
   margin-top: 0.5rem;
   width: 100%;
 }
+
+.widget-preview.widget-preview--statistic .statistic-chart-widget__chart {
+  height: 440px;
+}
